--- a/docs/classwork/java/lessons/Unit-1/Lesson 2 - Variables and Data/.vscode/launch.json
+++ b/docs/classwork/java/lessons/Unit-1/Lesson 2 - Variables and Data/.vscode/launch.json
@@ -4,6 +4,12 @@
             "type": "java",
             "name": "CodeLens (Launch) - variables_Int",
             "request": "launch",
+            "mainClass": "variables_Int"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - variables_Int",
+            "request": "launch",
             "mainClass": "variables_Int",
             "projectName": "Lesson 2 - Variables and Data_df21e49a"
         },
