--- a/docs/classwork/java/lessons/Unit-1/Lesson 2 - Variables and Data/.vscode/launch.json
+++ b/docs/classwork/java/lessons/Unit-1/Lesson 2 - Variables and Data/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Answer",
+            "request": "launch",
+            "mainClass": "Answer",
+            "projectName": "Lesson 2 - Variables and Data_86dbf40c"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - variables_Int",
             "request": "launch",
             "mainClass": "variables_Int"
