--- a/docs/classwork/java/lessons/Unit-1/.vscode/launch.json
+++ b/docs/classwork/java/lessons/Unit-1/.vscode/launch.json
@@ -2,6 +2,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Repeat1000",
+            "request": "launch",
+            "mainClass": "Repeat1000",
+            "projectName": "Unit-1_28259176"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - RollerCoaster",
+            "request": "launch",
+            "mainClass": "RollerCoaster",
+            "projectName": "Unit-1_28259176"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - TripleDouble",
+            "request": "launch",
+            "mainClass": "TripleDouble",
+            "projectName": "Unit-1_28259176"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - BooleanTest",
             "request": "launch",
             "mainClass": "BooleanTest",
