--- a/docs/classwork/java/lessons/Unit-1/.vscode/launch.json
+++ b/docs/classwork/java/lessons/Unit-1/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - IceCream",
+            "request": "launch",
+            "mainClass": "IceCream",
+            "projectName": "Unit-1_fa45df97"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - BooleanTest",
             "request": "launch",
             "mainClass": "BooleanTest",
