--- a/docs/classwork/java/lessons/Unit_2/.vscode/launch.json
+++ b/docs/classwork/java/lessons/Unit_2/.vscode/launch.json
@@ -2,6 +2,24 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Average",
+            "request": "launch",
+            "mainClass": "Average"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - square",
+            "request": "launch",
+            "mainClass": "square"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - DoubleNumber",
+            "request": "launch",
+            "mainClass": "DoubleNumber"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - MyProgram",
             "request": "launch",
             "mainClass": "MyProgram"
