--- a/docs/classwork/java/lessons/Unit_2/Lesson 8 - String Processing/.vscode/launch.json
+++ b/docs/classwork/java/lessons/Unit_2/Lesson 8 - String Processing/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Palindromes",
+            "request": "launch",
+            "mainClass": "Palindromes",
+            "projectName": "Lesson 8 - String Processing_80248468"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - StringConcatenation",
             "request": "launch",
             "mainClass": "StringConcatenation",
